--- a/aboutus.html
+++ b/aboutus.html
@@ -1,131 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Meta tags -->
-    <title>Abouts Us - TransitAura</title>
-    <meta name="comp1800 template" content="My 1800 App" />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Learn more about TransitAura, our mission, and our team dedicated to enhancing public transit safety."/>
-    <title>About TransitAura</title>
-    <link rel="icon" type="image/x-icon" href="media/ta-bus.png">
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <!-- Firebase-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    <!-- Other libs -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link rel="stylesheet" href="styles/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <style>
-      /* styles specific to this page */
-      body {
+
+<head>
+  <!-- Meta tags -->
+  <title>Abouts Us - TransitAura</title>
+  <meta name="comp1800 template" content="My 1800 App" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description"
+    content="Learn more about TransitAura, our mission, and our team dedicated to enhancing public transit safety." />
+  <title>About TransitAura</title>
+  <link rel="icon" type="image/x-icon" href="media/ta-bus.png">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <!-- Firebase-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+  <!-- Other libs -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <style>
+    /* styles specific to this page */
+    body {
       font-family: "Roboto", sans-serif;
       font-weight: 400;
       font-style: normal;
-      }
-      p, ul {
+    }
+
+    p,
+    ul {
       font-family: "Roboto", sans-serif;
       font-weight: 300;
       font-style: normal;
-      }
-    </style>
-  </head>
+    }
+  </style>
+</head>
 
-  <body id="body">
-    <header>
-      <a href="index.html">
+<body id="body">
+  <header>
+    <a href="index.html">
       <button class="back-button">← Back</button></a>
-    </header>
+  </header>
 
-    <nav id="navbarPlaceholder"></nav>
+  <nav id="navbarPlaceholder"></nav>
 
-    <div id="aboutUs">
+  <div id="aboutUs">
+    <div>
+      <h1 class="h1InAbout">What is TransitAura?</h1>
       <div>
-        <h1 class="h1InAbout">What is TransitAura?</h1>
-        <div>
-          <p>
-            <span style="color: #6699cc">TransitAura</span> provides real-time
-            safety insights and easy access to emergency contacts. empowering
-            transit users to make safe, informed choices while using public
-            transportation.
-          </p>
-        </div>
-      </div>
-
-      <div class="story">
-        <h1 class="h1InAbout">Our Story</h1>
-        <div>
-          <p>
-            <span style="color: #6699cc">TransitAura</span> began with our mission
-            to make public transit safer and more accessible for everyone.
-          </p>
-        </div>
-      </div>
-
-
-      <div class="values">
-        <img src="/media/busVector.jpg" alt="image"/>
-        <h1 class="h1InAbout">Our Values</h1>
-        <div>
-          <p>
-            Our core values guide our approach:
-            <ul>
-              <li><strong>User Safety:</strong> We are committed to providing features that prioritize the safety and well-being of transit users.</li>
-              <li><strong>Accessibility:</strong> We believe in making transit information accessible to all, fostering a connected and informed community.</li>
-              <li><strong>Community Focus:</strong> Our app is designed to serve transit riders by helping create a network of safer and more informed travelers.</li>
-            </ul>
-          </p>
-        </div>
-      </div>
-
-
-      <div class="vision">
-        <img src="/media/skytrain.jpg" alt="image"/>
-        <h1 class="h1InAbout">Our Vision for Transit Safety</h1>
-        <div>
-          <p>
-            Every transit user deserves peace of mind when they travel.
-            <span style="color: #6699cc">TransitAura</span> was built with this
-            belief at its core, helping communities stay informed of potential
-            safety concerns and fostering a safer environment for everyone.
-          </p>
-        </div>
-      </div>
-
-
-      <div class="team">
-        <img src="/media/bcitBurnaby.jpeg" alt="image" />
-        <h1 class="h1InAbout">Meet the Team</h1>
         <p>
-          We are three dedicated Computer Systems Technology students with a
-          passion for making a difference. Our fresh perspectives and shared
-          commitment to public safety have driven us to create an app that
-          empowers transit users to stay informed, safe, and connected.
-        </p>
-        <p>
-          <strong>Why We Built TransitAura:</strong> We saw an opportunity to
-          improve transit experiences by addressing safety concerns. With
-          insights from our coursework and our own transit experiences, we aimed
-          to bridge this gap with a user-friendly, responsive app.
+          <span style="color: #6699cc">TransitAura</span> provides real-time
+          safety insights and easy access to emergency contacts. empowering
+          transit users to make safe, informed choices while using public
+          transportation.
         </p>
       </div>
     </div>
 
-    <br /><br /><br /><br />
+    <div class="story">
+      <h1 class="h1InAbout">Our Story</h1>
+      <div>
+        <p>
+          <span style="color: #6699cc">TransitAura</span> began with our mission
+          to make public transit safer and more accessible for everyone.
+        </p>
+      </div>
+    </div>
 
 
-    <!-- JS  -->
-    <script src="scripts/firebaseConfig.js"></script>
-    <script src="scripts/login.js"></script>
-    <script src="scripts/skeleton.js"></script>
-  </body>
+    <div class="values">
+      <img src="/media/busVector.jpg" alt="image" />
+      <h1 class="h1InAbout">Our Values</h1>
+      <div>
+        <p>
+          Our core values guide our approach:
+        <ul>
+          <li><strong>User Safety:</strong> We are committed to providing features that prioritize the safety and
+            well-being of transit users.</li>
+          <li><strong>Accessibility:</strong> We believe in making transit information accessible to all, fostering a
+            connected and informed community.</li>
+          <li><strong>Community Focus:</strong> Our app is designed to serve transit riders by helping create a network
+            of safer and more informed travelers.</li>
+        </ul>
+        </p>
+      </div>
+    </div>
+
+
+    <div class="vision">
+      <img src="/media/skytrain.jpg" alt="image" />
+      <h1 class="h1InAbout">Our Vision for Transit Safety</h1>
+      <div>
+        <p>
+          Every transit user deserves peace of mind when they travel.
+          <span style="color: #6699cc">TransitAura</span> was built with this
+          belief at its core, helping communities stay informed of potential
+          safety concerns and fostering a safer environment for everyone.
+        </p>
+      </div>
+    </div>
+
+
+    <div class="team">
+      <img src="/media/bcitBurnaby.jpeg" alt="image" />
+      <h1 class="h1InAbout">Meet the Team</h1>
+      <p>
+        We are three dedicated Computer Systems Technology students with a
+        passion for making a difference. Our fresh perspectives and shared
+        commitment to public safety have driven us to create an app that
+        empowers transit users to stay informed, safe, and connected.
+      </p>
+      <p>
+        <strong>Why We Built TransitAura:</strong> We saw an opportunity to
+        improve transit experiences by addressing safety concerns. With
+        insights from our coursework and our own transit experiences, we aimed
+        to bridge this gap with a user-friendly, responsive app.
+      </p>
+    </div>
+  </div>
+
+  <br /><br /><br /><br />
+
+
+  <!-- JS  -->
+  <script src="scripts/firebaseConfig.js"></script>
+  <script src="scripts/login.js"></script>
+  <script src="scripts/skeleton.js"></script>
+</body>
+
 </html>
