--- a/aurapoints.html
+++ b/aurapoints.html
@@ -1,79 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Meta tags -->
-    <title>Aura Points</title>
-    <link rel="icon" type="image/x-icon" href="media/ta-bus.png">
-    <meta name="comp1800 template" content="My 1800 App" />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <!-- Firebase -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    <!-- Other libs -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link rel="stylesheet" href="/styles/styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
-    <style>
+
+<head>
+  <!-- Meta tags -->
+  <title>Aura Points</title>
+  <link rel="icon" type="image/x-icon" href="media/ta-bus.png">
+  <meta name="comp1800 template" content="My 1800 App" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <!-- Firebase -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+  <!-- Other libs -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="/styles/styles.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet" />
+  <style>
     /* styles specific to this page (moving to styles css would cause bootstrap conflict.
     we didnt have enough time to uniquely ID everything.) */
     .card {
-        padding: 0.8rem;
-        font-size: 0.9rem;
-        border-radius: 0.5rem;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        margin-top: 10px !important;
-        margin-bottom:10px !important;   
-     }
+      padding: 0.8rem;
+      font-size: 0.9rem;
+      border-radius: 0.5rem;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      margin-top: 10px !important;
+      margin-bottom: 10px !important;
+    }
+
     .card-title {
-        font-size: 1.1rem;
-        color: #0044cc;
+      font-size: 1.1rem;
+      color: #0044cc;
     }
+
     .card-text {
-        font-size: 0.9rem;
+      font-size: 0.9rem;
     }
+
     .container {
-        max-width: 600px;
-        margin: 0 auto;
+      max-width: 600px;
+      margin: 0 auto;
     }
-    </style>
-  </head>
+  </style>
+</head>
 
-  <body>
-    <!-- back button -->
-    <div class="back-button-container">
-        <button onclick="window.history.back()">← Back</button>
-    </div>
-    
-    <!-- navbar -->
-    <nav id="navbarPlaceholder"></nav>
-
-    <!-- main page container -->
-    <div class="container mt-4">
-      <h1 class="text-center text-primary">Aura Points</h1>
-      <!-- user aura points and title -->
-      <div class="card mt-4 shadow-sm">
-          <div class="card-body text-center">
-              <h2 id="userAuraPoints" class="text-info"></h2>
-              <h4 id="titleDisplay" class="text-secondary"></h4>
-          </div>
-      </div>
-      <!-- achievements container -->
-      <div id="achievementsContainer" class="mt-4"></div>
+<body>
+  <!-- back button -->
+  <div class="back-button-container">
+    <button onclick="window.history.back()">← Back</button>
   </div>
 
-    <!-- JS -->
-    <script src="scripts/firebaseConfig.js"></script>
-    <script src="scripts/login.js"></script>
-    <script src="scripts/skeleton.js"></script>
-    <script src="scripts/aurapoints.js"></script>
-  </body>
+  <!-- navbar -->
+  <nav id="navbarPlaceholder"></nav>
+
+  <!-- main page container -->
+  <div class="container mt-4">
+    <h1 class="text-center text-primary">Aura Points</h1>
+    <!-- user aura points and title -->
+    <div class="card mt-4 shadow-sm">
+      <div class="card-body text-center">
+        <h2 id="userAuraPoints" class="text-info"></h2>
+        <h4 id="titleDisplay" class="text-secondary"></h4>
+      </div>
+    </div>
+    <!-- achievements container -->
+    <div id="achievementsContainer" class="mt-4"></div>
+  </div>
+
+  <!-- JS -->
+  <script src="scripts/firebaseConfig.js"></script>
+  <script src="scripts/login.js"></script>
+  <script src="scripts/skeleton.js"></script>
+  <script src="scripts/aurapoints.js"></script>
+</body>
+
 </html>
