--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Other libs -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -20,54 +23,61 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
-    /* styles specific to this page (moving them to styles.css would result in 
+        /* styles specific to this page (moving them to styles.css would result in 
     bootstrap conflict. we didn't have enough time to make unique ID styles for everything) */
-    body {
-        font-family: 'Poppins', sans-serif;
-        background-color: #f8f9fa;
-        margin: 0;
-        padding: 0;
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #f8f9fa;
+            margin: 0;
+            padding: 0;
 
-    }
-    .navbar {
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-    .container {
-        text-align: center;
-    }
-    .container img {
-        width: 100px;
-    
-        object-fit: cover;
-        margin-bottom: 5px;
-   
-        margin: 0 auto;
-    }
-    .container h1 {
-        font-size: 2rem;
-        font-weight: 700;
-        margin-bottom: 10px;
-    }
-    .container p {
-        font-size: 1rem;
-        line-height: 1.6;
-        margin: 5px 0;
-    }
-    .text-primary {
-        font-size: 1.2rem;
-        font-weight: 600;
-    }
-    body {
-    padding-bottom: 60px;
-    }
-        </style>
-    </head>
-    
+        }
+
+        .navbar {
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .container {
+            text-align: center;
+        }
+
+        .container img {
+            width: 100px;
+
+            object-fit: cover;
+            margin-bottom: 5px;
+
+            margin: 0 auto;
+        }
+
+        .container h1 {
+            font-size: 2rem;
+            font-weight: 700;
+            margin-bottom: 10px;
+        }
+
+        .container p {
+            font-size: 1rem;
+            line-height: 1.6;
+            margin: 5px 0;
+        }
+
+        .text-primary {
+            font-size: 1.2rem;
+            font-weight: 600;
+        }
+
+        body {
+            padding-bottom: 60px;
+        }
+    </style>
+</head>
+
 <body>
     <!-- header -->
     <nav class="navbar" style="background-color: #f8f9fa;" id="header">
@@ -75,7 +85,7 @@
             <img src="./media/ta-full-logo.png" alt="TransitAura Logo" id="mainlogo">
             <a href="login.html" class="btn btn-primary" role="button" id="loginbutton">Log in</a>
         </div>
-        </nav>
+    </nav>
     <!-- Navbar -->
     <nav id="navbarPlaceholder"></nav>
 
@@ -83,26 +93,30 @@
     <div class="container">
         <!--slogan-->
         <h1 class="text-primary" id="homepage-ridingtransittransitaura">Riding Transit? TransitAura.</h2>
-        <!--mockup image 1-->
-        <img src="media/mainhtml-mockup.png" alt="TransitAura Mockup" id="main-mockup">
-        <br>
-        <!-- Description -->
-        <p id="homepage-p1">
-            Welcome to <strong>TransitAura</strong>, a project aimed at making Vancouver safer for its residents.
-            Using our easy-to-navigate interface, users can view and report useful information about their transit stations and routes in Metro Vancouver.
-        </p>
-        <!--bus image-->
-        <img src="media/ta-bus.png" id="busimg">
-        <!--features list-->
-        <h2 id="homepage-featurelistheader">Features for Stations and Routes</p>
-        <p id="homepage-featurelistitem"><strong>·</strong> View and report how safe you feel using Safety Level <strong>·</strong></p>
-        <p id="homepage-featurelistitem"><strong>·</strong> View and report experiences using Incidents <strong>·</strong></p>
-        <p id="homepage-featurelistitem">NEW: View your Station on the Map page!</p>
-        <!--mockup image 2-->
-        <img src="media/stations-mockup.png" id="stations-mockup">
-        <!-- try it now and slogan2 img-->
-        <h1 class="text-primary" id="homepage-ridingtransittransitaura" style="margin-top: 35px;">Try it now!</h2>
-        <img src="media/ta-logo-safely.png" id="safely">
+            <!--mockup image 1-->
+            <img src="media/mainhtml-mockup.png" alt="TransitAura Mockup" id="main-mockup">
+            <br>
+            <!-- Description -->
+            <p id="homepage-p1">
+                Welcome to <strong>TransitAura</strong>, a project aimed at making Vancouver safer for its residents.
+                Using our easy-to-navigate interface, users can view and report useful information about their transit
+                stations and routes in Metro Vancouver.
+            </p>
+            <!--bus image-->
+            <img src="media/ta-bus.png" id="busimg">
+            <!--features list-->
+            <h2 id="homepage-featurelistheader">Features for Stations and Routes</p>
+                <p id="homepage-featurelistitem"><strong>·</strong> View and report how safe you feel using Safety Level
+                    <strong>·</strong></p>
+                <p id="homepage-featurelistitem"><strong>·</strong> View and report experiences using Incidents
+                    <strong>·</strong></p>
+                <p id="homepage-featurelistitem">NEW: View your Station on the Map page!</p>
+                <!--mockup image 2-->
+                <img src="media/stations-mockup.png" id="stations-mockup">
+                <!-- try it now and slogan2 img-->
+                <h1 class="text-primary" id="homepage-ridingtransittransitaura" style="margin-top: 35px;">Try it now!
+            </h2>
+            <img src="media/ta-logo-safely.png" id="safely">
     </div>
 
     <!-- JS -->
