--- a/profile.html
+++ b/profile.html
@@ -1,65 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <!-- meta tags -->
-  <title>Profile</title>
-  <link rel="icon" type="image/x-icon" href="media/ta-bus.png">
-  <meta name="comp1800 template" content="My 1800 App" />
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <!-- Firebase -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-  <!-- Other libs -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles/styles.css" />
+    <!-- meta tags -->
+    <title>Profile</title>
+    <link rel="icon" type="image/x-icon" href="media/ta-bus.png">
+    <meta name="comp1800 template" content="My 1800 App" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <!-- Firebase -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+    <!-- Other libs -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/styles/styles.css" />
 </head>
 
 <body>
-<!-- back button -->
-<div class="back-button-container">
-  <button onclick="window.history.back()">← Back</button>
-</div>
+    <!-- back button -->
+    <div class="back-button-container">
+        <button onclick="window.history.back()">← Back</button>
+    </div>
 
-<!-- navbar -->
-<nav id="navbarPlaceholder"></nav>
+    <!-- navbar -->
+    <nav id="navbarPlaceholder"></nav>
 
-<!-- main page container - profile info -->
-<div class="container" id="userProfileContainer">
-    <h1>User Profile </h1>
-    <form>
-        <fieldset class="mb-3" id="personalInfoFields" disabled>
-            <div class="form-group">
-                <label >Email</label>
-                <input type="text" id="userEmail" class="form-control">
+    <!-- main page container - profile info -->
+    <div class="container" id="userProfileContainer">
+        <h1>User Profile </h1>
+        <form>
+            <fieldset class="mb-3" id="personalInfoFields" disabled>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="text" id="userEmail" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" id="nameInput" class="form-control">
+                </div>
+            </fieldset>
+            <div class="d-flex justify-content-end mt-5">
+                <button type="button" id="editUserInfoButton" class="btn" onclick="editUserInfo()">Edit</button>
+                <button type="button" id="saveUserInfoButton" class="btn" onclick="saveUserInfo()">Save</button>
             </div>
-            <div class="form-group">
-                <label >Name</label>
-                <input type="text" id="nameInput" class="form-control">
-            </div>
-        </fieldset>
-        <div class="d-flex justify-content-end mt-5">
-            <button type="button" id="editUserInfoButton" class="btn" onclick="editUserInfo()">Edit</button>
-            <button type="button" id="saveUserInfoButton" class="btn" onclick="saveUserInfo()">Save</button>
-        </div>
-    </form>
-</div>
-<br>
-<br>
+        </form>
+    </div>
+    <br>
+    <br>
 
-<!-- JS -->
-<script src="scripts/firebaseConfig.js"></script>
-<script src="scripts/login.js"></script>
-<script src="scripts/skeleton.js"></script>
-<script src="scripts/profile.js"></script>
+    <!-- JS -->
+    <script src="scripts/firebaseConfig.js"></script>
+    <script src="scripts/login.js"></script>
+    <script src="scripts/skeleton.js"></script>
+    <script src="scripts/profile.js"></script>
 </body>
+
 </html>
