--- a/route.html
+++ b/route.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <!-- Meta tags -->
   <meta charset="UTF-8">
@@ -7,14 +8,17 @@
   <title>Route Page</title>
   <link rel="icon" type="image/x-icon" href="media/ta-bus.png">
   <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
   <!-- Firebase -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
+  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
   <!-- Other libs -->
@@ -31,6 +35,7 @@
   <script src="scripts/recentlyviewed.js" defer></script>
   <script src="scripts/bookmark.js" defer></script>
 </head>
+
 <body>
   <!-- navbar -->
   <nav id="navbarPlaceholder"></nav>
@@ -49,11 +54,11 @@
   <!-- back button and bookmark icon -->
   <div class="backbtnbookmarkicon-container">
     <button onclick="window.history.back()">← Back</button>
-  <img src="media/bookmark-unfilled.png" id="bookmarkIcon" class="bookmark-icon" alt="Bookmark icon">
+    <img src="media/bookmark-unfilled.png" id="bookmarkIcon" class="bookmark-icon" alt="Bookmark icon">
   </div>
 
   <!-- success msg -->
-  <p id="reportMessage"></p> 
+  <p id="reportMessage"></p>
   <div id="successMessage" class="success-message"></div>
   <div id="messageBox" class="mt-3" style="text-align: center;"></div>
   <div id="incidentMessageBox" class="mt-3" style="text-align: center;"></div>
@@ -62,24 +67,24 @@
   <div id="safetyLevel">
     <h2>Current Safety Level</h2>
     <div class="safety-bar-container">
-        <div class="safety-bar">
-            <div class="average-overlay" id="averageOverlay">N/A</div>
-        </div>
+      <div class="safety-bar">
+        <div class="average-overlay" id="averageOverlay">N/A</div>
+      </div>
     </div>
     <p id="safetyReportInfo">No reports in the last hour.</p>
-  <p id="reportMessage"></p>
-  <div class="select-wrapper">
-    <label for="safetyLevelInput"></label>
-    <select id="safetyLevelInput" class="safetySelect">
+    <p id="reportMessage"></p>
+    <div class="select-wrapper">
+      <label for="safetyLevelInput"></label>
+      <select id="safetyLevelInput" class="safetySelect">
         <option value="">Report Safety Level</option>
         <option value="1">1 - Very Unsafe</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
         <option value="5">5 - Very Safe</option>
-    </select>
+      </select>
     </div>
-  <button id="reportSafetyButton">Submit Safety Level</button>
+    <button id="reportSafetyButton">Submit Safety Level</button>
   </div>
 
   <!-- incidents -->
@@ -92,24 +97,25 @@
     <button class="btn btn-primary" id="submitReportBtn">Submit an Incident Report</button>
     <!-- Incident report overlay -->
     <div id="overlay">
-        <div id="overlayContent">
-            <button id="closeOverlay">&times;</button>
-            <h3>Submit an Incident Report</h3>
-            <form id="incidentForm">
-                <div class="mb-3">
-                    <label for="incidentTitle" class="form-label">Title (Optional)</label>
-                    <input type="text" class="form-control" id="incidentTitle" placeholder="Incident Title">
-                </div>
-                <div class="mb-3">
-                    <label for="incidentDetails" class="form-label">Details</label>
-                    <textarea class="form-control" id="incidentDetails" rows="5" placeholder="Provide detailed information about the incident" required></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit Report</button>
-            </form>
-        </div>
+      <div id="overlayContent">
+        <button id="closeOverlay">&times;</button>
+        <h3>Submit an Incident Report</h3>
+        <form id="incidentForm">
+          <div class="mb-3">
+            <label for="incidentTitle" class="form-label">Title (Optional)</label>
+            <input type="text" class="form-control" id="incidentTitle" placeholder="Incident Title">
+          </div>
+          <div class="mb-3">
+            <label for="incidentDetails" class="form-label">Details</label>
+            <textarea class="form-control" id="incidentDetails" rows="5"
+              placeholder="Provide detailed information about the incident" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit Report</button>
+        </form>
+      </div>
     </div>
 
-</div>
+  </div>
 </body>
 
 <script>
@@ -117,9 +123,10 @@
     const routeId = getRouteIdFromURL();
 
     if (routeId) {
-        loadRouteData();
-        checkBookmarkStatus(routeId);
+      loadRouteData();
+      checkBookmarkStatus(routeId);
     }
-});
+  });
 </script>
+
 </html>
