--- a/station.html
+++ b/station.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <!-- Meta tags -->
   <meta charset="UTF-8">
@@ -7,8 +8,11 @@
   <title>Station Page</title>
   <link rel="icon" type="image/x-icon" href="media/ta-bus.png">
   <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Firebase -->
@@ -32,6 +36,7 @@
   <script src="scripts/recentlyviewed.js" defer></script>
   <script src="scripts/bookmark.js" defer></script>
 </head>
+
 <body>
   <!-- navbar -->
   <nav id="navbarPlaceholder"></nav>
@@ -41,7 +46,7 @@
       <img src="./media/ta-full-logo.png" alt="TransitAura Logo" id="mainlogo">
     </div>
   </nav>
-  
+
   <!-- station info -->
   <h1 id="stationName" style="font-family: 'Lato', sans-serif; font-size: 38px;">Station Name</h1>
   <p id="stationNeighborhood">Neighborhood: </p>
@@ -52,40 +57,40 @@
   <!-- back button and bookmark icon -->
   <div class="backbtnbookmarkicon-container">
     <button onclick="window.history.back()">← Back</button>
-  <img src="media/bookmark-unfilled.png" id="bookmarkIcon" class="bookmark-icon" alt="Bookmark icon">
+    <img src="media/bookmark-unfilled.png" id="bookmarkIcon" class="bookmark-icon" alt="Bookmark icon">
   </div>
 
   <!-- success msg -->
-  <p id="reportMessage"></p> 
+  <p id="reportMessage"></p>
   <div id="successMessage" class="success-message"></div>
   <div id="messageBox" class="mt-3" style="text-align: center;"></div>
   <div id="incidentMessageBox" class="mt-3" style="text-align: center;"></div>
 
-<!-- safety level -->
+  <!-- safety level -->
   <div id="safetyLevel">
     <h2>Current Safety Level</h2>
     <div class="safety-bar-container">
-        <div class="safety-bar">
-            <div class="average-overlay" id="averageOverlay">N/A</div>
-        </div>
+      <div class="safety-bar">
+        <div class="average-overlay" id="averageOverlay">N/A</div>
+      </div>
     </div>
     <p id="safetyReportInfo">No reports in the last hour.</p> <!-- New info text -->
     <div class="select-wrapper">
-    <label for="safetyLevelInput"></label>
-    <select id="safetyLevelInput" class="safetySelect">
+      <label for="safetyLevelInput"></label>
+      <select id="safetyLevelInput" class="safetySelect">
         <option value="">Report Safety Level</option>
         <option value="1">1 - Very Unsafe</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
         <option value="5">5 - Very Safe</option>
-    </select>
+      </select>
     </div>
     <button id="reportSafetyButton">Submit Safety Level</button>
     <div id="messageBox" class="mt-3"></div>
-</div>
+  </div>
 
-<!-- incidents -->
+  <!-- incidents -->
   <div id="incidents">
     <h2 id="recentIncidentsH2">Recent Incidents</h2>
     <div id="recentIncidents" class="mt-5">
@@ -107,11 +112,13 @@
         </div>
         <div class="mb-3">
           <label for="incidentDetails" class="form-label">Details</label>
-          <textarea class="form-control" id="incidentDetails" rows="5" placeholder="Provide detailed information about the incident" required></textarea>
+          <textarea class="form-control" id="incidentDetails" rows="5"
+            placeholder="Provide detailed information about the incident" required></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit Report</button>
       </form>
     </div>
   </div>
 </body>
+
 </html>
